--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@types/node": "^18.13.0",
     "axios": "^1.2.6",
     "element-plus": "^2.2.26",
+    "less": "^4.1.3",
     "vue": "^3.2.45",
     "vue-router": "^4.1.6"
   },
