--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@types/node": "^18.13.0",
     "axios": "^1.2.6",
+    "echarts": "^5.4.1",
     "element-plus": "^2.2.26",
     "less": "^4.1.3",
     "vue": "^3.2.45",
