--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "echarts": "^5.4.1",
     "element-plus": "^2.2.26",
     "less": "^4.1.3",
+    "moment": "^2.29.4",
     "vue": "^3.2.45",
     "vue-router": "^4.1.6"
   },
