--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "element-plus": "^2.2.26",
     "less": "^4.1.3",
     "mockjs": "^1.1.0",
+    "openai": "^3.2.1",
     "vue": "^3.2.45",
     "vue-router": "^4.1.6"
   },
