--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "less": "^4.1.3",
     "mockjs": "^1.1.0",
     "openai": "^3.2.1",
+    "swiper": "^9.2.4",
     "vue": "^3.2.45",
     "vue-router": "^4.1.6"
   },
