--- a/package.json
+++ b/package.json
@@ -17,8 +17,9 @@
     "less": "^4.1.3",
     "mockjs": "^1.1.0",
     "openai": "^3.2.1",
+    "pinia": "^2.1.6",
     "swiper": "^9.2.4",
-    "vue": "^3.2.45",
+    "vue": "^3.3.0",
     "vue-router": "^4.1.6"
   },
   "devDependencies": {
